# camera_manager

./: CMakeLists.txt  package.xml
include/camera_manager/: camera_id.hpp  camera_manager.hpp  data_saver.hpp
include/camera_manager/algorithm_client/: algo_cli.hpp  fake_algo_cli.hpp
launch/: camera_manager.launch.py
params/: config.yaml
src/: camera_manager.cpp  data_saver.cpp  main.cpp
src/algorithm_client/: algo_cli.cpp  fake_algo_cli.cpp
